# ds_crm_sdk

./: .coverage  .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  pylint.yml
ds_crm_sdk/: __init__.py  constants.py  logging.py
ds_crm_sdk/clients/http/: async_crm_client.py  base.py  crm_client.py  endpoints.py
ds_crm_sdk/dtos/: __init__.py  account.py
ds_crm_sdk/http_clients/: async_crm_client.py  crm_client.py  endpoints.py
ds_crm_sdk/payloads/: __init__.py  base.py  base_request_models.py  builders.py  constants.py  factory.py  main_payload.py  request_models.py
ds_crm_sdk/sdk_contracts/: __init__.py  crm.py
ds_crm_sdk/sdk_contracts/asyncio/: __init__.py  crm.py
ds_crm_sdk/transports/: __init__.py  base.py  http_async.py  http_sync.py
ds_crm_sdk/transports/http/: __init__.py  base.py  http_async.py  http_sync.py
tests/: test_http_async_crm_client.py  test_http_crm_client.py
tests/fixtures/: __init__.py  dummy_models.py  factories.py
tests/integration/: test_http_async_crm_client.py  test_http_crm_client.py
tests/unit/: test_builders.py
