[project]
name = "ds_crm_sdk"
version = "0.1.0"
description = "Deep Sentinel CRM SDK for CRM service with transport layer"
authors = [
    { name = "Prav", email = "praveen@deepsentinel.com"}
]
dependencies = [
    "httpx>=0.24.0",
    "requests>=2.32.4",
    "pydantic>=2.0.0"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "TBA"
Repository = "TBA"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools.package-dir]
ds_crm_sdk = "ds_crm_sdk"